[project]
name = "ILY_Bot"
version = "0.1.0"
description = "ILY_Bot"
readme = "README.md"
requires-python = ">=3.9, <4.0"
authors = [
    {name = "AceKashiwa", email = "payoung@zju.edu.cn"},
]
dependencies = []
license = {text = "MIT"}

[tool.nonebot]
adapters = [
    { name = "OneBot V11", module_name = "nonebot.adapters.onebot.v11" },
    { name = "Console", module_name = "nonebot.adapters.console" }
]
plugins = []
plugin_dirs = ["src/plugins"]
builtin_plugins = ["echo"]

[tool.pdm]
distribution = false

[tool.pdm.scripts]
start = "python bot.py"