[project]
name = "ILY_Bot"
version = "0.1.1"
description = "This project is a personal bot designed for learning and experimenting with Python and related frameworks."
readme = "README.md"
requires-python = ">=3.9, <4.0"
dependencies = [
    "annotated-types==0.7.0",
    "anyio==4.9.0",
    "build==1.2.2.post1",
    "CacheControl==0.14.2",
    "certifi==2025.1.31",
    "charset-normalizer==3.4.1",
    "cleo==2.1.0",
    "click==8.1.8",
    "colorama==0.4.6",
    "crashtest==0.4.1",
    "distlib==0.3.9",
    "dulwich==0.22.8",
    "exceptiongroup==1.2.2",
    "fastapi==0.115.12",
    "fastjsonschema==2.21.1",
    "filelock==3.18.0",
    "findpython==0.6.3",
    "h11==0.14.0",
    "h2==4.2.0",
    "hpack==4.1.0",
    "httpcore==1.0.7",
    "httptools==0.6.4",
    "httpx==0.28.1",
    "hyperframe==6.1.0",
    "idna==3.10",
    "installer==0.7.0",
    "jaraco-classes==3.4.0",
    "jaraco-context==6.0.1",
    "jaraco-functools==4.1.0",
    "keyring==25.6.0",
    "linkify-it-py==2.0.3",
    "loguru==0.7.3",
    "markdown-it-py==3.0.0",
    "mdit-py-plugins==0.4.2",
    "mdurl==0.1.2",
    "more-itertools==10.6.0",
    "msgpack==1.1.0",
    "multidict==6.3.0",
    "nonebot-adapter-console==0.6.0",
    "nonebot-adapter-onebot==2.4.6",
    "nonebot2==2.4.2",
    "nonechat==0.3.0",
    "packaging==24.2",
    "pbs-installer==2025.3.17",
    "pip==25.0.1",
    "pkginfo==1.12.1.2",
    "platformdirs==4.3.7",
    "poetry-core==2.1.2",
    "propcache==0.3.1",
    "pydantic-core==2.33.0",
    "pydantic==2.11.1",
    "Pygments==2.19.1",
    "pygtrie==2.5.0",
    "pyproject-hooks==1.2.0",
    "python-dotenv==1.1.0",
    "pywin32-ctypes==0.2.3",
    "PyYAML==6.0.2",
    "RapidFuzz==3.12.2",
    "requests-toolbelt==1.0.0",
    "requests==2.32.3",
    "rich==14.0.0",
    "shellingham==1.5.4",
    "sniffio==1.3.1",
    "starlette==0.46.1",
    "textual==3.0.1",
    "tomlkit==0.13.2",
    "trove-classifiers==2025.3.19.19",
    "typing-extensions==4.13.0",
    "typing-inspection==0.4.0",
    "uc-micro-py==1.0.3",
    "urllib3==2.3.0",
    "uvicorn==0.34.0",
    "virtualenv==20.30.0",
    "watchfiles==1.0.4",
    "websockets==15.0.1",
    "win32-setctime==1.2.0",
    "yarl==1.18.3",
    "zstandard==0.23.0",
    "nonebot-plugin-heweather>=0.8.2",
]
authors = [
    {name = "AceKashiwa", email = "payoung@zju.edu.cn"},
]
license = {text = "MIT"}

[tool.nonebot]
adapters = [
    { name = "OneBot V11", module_name = "nonebot.adapters.onebot.v11" },
    { name = "Console", module_name = "nonebot.adapters.console" }
]
plugins = ["nonebot_plugin_status", "nonebot_plugin_docs", "nonebot_plugin_translator", "nonebot_plugin_heweather", "nonebot_plugin_memes", "nonebot_plugin_setu_now", "nonebot_plugin_shindan", "nonebot_plugin_miragetank", "nonebot_plugin_txt2img", "nonebot_plugin_htmlrender"]
plugin_dirs = ["src/plugins"]
builtin_plugins = ["echo"]

[tool.pdm]
distribution = false

[tool.pdm.scripts]
start = "python bot.py"